<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- プロジェクトを一意に識別する名前 -->
  <groupId>cbc</groupId>
  <!-- プロジェクトの成果物の名前 -->
  <artifactId>cbc</artifactId>
  <packaging>jar</packaging>
  <version>0.1-SNAPSHOT</version>
  <!-- プロジェクトの表示名 -->
  <name>c flat compiler</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
  </properties>

  <!-- プロジェクトが依存するライブラリ -->
  <dependencies>
    <dependency>
      <groupId>com.helger</groupId>
      <artifactId>parser-generator-cc</artifactId>
      <version>1.1.3</version>
    </dependency>
    
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.6.2</version>
      <scope>test</scope>
    </dependency>
    
  </dependencies>

  <build>
    <plugins>

      <!-- formatting source -->
      <plugin>
	<groupId>net.revelc.code.formatter</groupId>
	<artifactId>formatter-maven-plugin</artifactId>
	<version>2.12.0</version>
	<configuration>
	  <configFile>formatter-config.xml</configFile>
	</configuration>
	<executions>
	  <execution>
	    <goals>
	      <goal>format</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>

      <!-- Compiler Compiler -->
      <plugin>
	<groupId>com.helger.maven</groupId>
	<artifactId>ph-javacc-maven-plugin</artifactId>
	<version>4.1.3</version>
	<executions>
	  <execution>
	    <id>javacc</id>
	    <phase>generate-sources</phase>
	    <goals>
	      <goal>javacc</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>

      <!-- Compiler(javac) -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>3.8.1</version>
	<configuration>
	  <useIncrementalCompilation>true</useIncrementalCompilation>
	  <compilerArgs>
	    <arg>-Xdiags:verbose</arg>
	    <arg>-Xlint:deprecation</arg>
	    <!--arg>-g</arg-->
	  </compilerArgs>
	</configuration>
      </plugin>

      <!-- TEST -->
      <plugin>
	<artifactId>maven-surefire-plugin</artifactId>
	<version>2.22.2</version>
      </plugin>

      <plugin>
	<artifactId>maven-failsafe-plugin</artifactId>
	<version>2.22.2</version>
      </plugin>

      <!-- Packaging -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-jar-plugin</artifactId>
	<version>3.2.0</version>
	<configuration>
          <archive>
            <manifest>
              <mainClass>cflat.compiler.Compiler</mainClass>
            </manifest>
          </archive>
	</configuration>
      </plugin>

    </plugins>
  </build>

</project>
